<resources>
    <string name="app_name">WICE</string>
    <string name="Lebensmittel" />
    <string name="eNummer" />
    <string name="create">Create</string>
    <string name="quit1">Quit</string>
    <string name="username1">Username</string>
    <string name="e_mail_adresse">E-mail</string>
    <string name="passwort">password</string>
    <string name="login">Login</string>
    <string name="help2">Help</string>
    <string name="weiter">weiter</string>
    <string name="quit2">Quit</string>
    <string name="todo">Todo</string>
    <string name="intoleranzen">Intolerances</string>
    <string name="username">Username</string>
    <string name="rezepte">Recipes</string>
    <string name="scanner">Scanner</string>
    <string name="favoriten">Favorites</string>
    <string name="quit3">Quit</string>
    <string name="newProfile2">New</string>
    <string name="todo4">Todo</string>
    <string name="e_nummer">E-Number</string>
    <string name="lebensmittel">food item</string>
    <string name="add">Add</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="don_t_save">Don\'t save</string>
    <string name="save">Save</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="lactose">Lactose</string>
    <string name="gluten">Gluten</string>
    <string name="quit">Quit</string>
    <string name="help">Help</string>
    <string name="add1">Add</string>
    <string name="newProfile">New</string>
    <string name="delete">Delete</string>
    <string name="post_it1">Post it</string>
    <string name="safe">Safe</string>
    <string name="zutatenliste">ingredients list</string>
    <string name="not_safe">Not safe</string>
    <string name="main_menu">Main Menu</string>
    <string name="name">Name</string>
    <string name="name1">Name</string>
    <string name="view_all">View all</string>
    <string name="view_all2">View all</string>
    <string name="search_location1">Search Location</string>
    <string name="title_activity_search_location">Map</string>
    <string name="my_new_recipe">My new recipe</string>
    <string name="search1">Search</string>
    <string name="recipetitle">Recipe Title</string>
    <string name="recipedetails">Recipe Details</string>
    <string name="comments">Comments</string>
    <string name="comment_this_recipe">Comment this recipe</string>
    <string name="post_it">Post it</string>
    <string name="RecipeDetails">Recipe Details</string>
    <string name="intolerance">Intolerance</string>
    <string name="e_number">E-number</string>
    <string name="todo1">Todo</string>
    <string name="todo2">Todo</string>
    <string name="todo3">Todo</string>
    <string name="scan">Scan</string>
    <string name="search2">Search</string>
    <string name="search_location">Search Location</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_posts">My Posts</string>
    <string name="button">Button</string>
</resources>
