<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context="com.example.kaschmed.wice.createAccount">

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        android:ems="10"
        android:hint="@string/e_mail_adresse"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            android:onClick="onClickClose"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            android:onClick="onClickSwitchtProfileActivity"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            tools:text="@string/newProfile" />

    </LinearLayout>


</LinearLayout>
