<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaschmed.wice.newRecipe"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_weight="1"
            android:background="#B71C1C"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:layout_editor_absoluteX="41dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_weight="1"
            android:background="#d32f2f"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_weight="1"
            android:background="#f44336"
            android:contentDescription="@string/todo"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/recipe_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ingredients" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/preparation"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:background="@android:color/white"
        tools:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/button19"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:text="@string/post_it"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>
