<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context="com.example.kaschmed.wice.MainActivity">


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="122dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:layout_weight="0"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:ems="10"
        android:hint="@string/e_mail_adresse"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/passwort"
        android:textColor="@android:color/background_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/NewButton"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            android:onClick="onClickSwitchtoCreateActivity"
            android:text="@string/newProfile"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            tools:style="@android:style/Widget.Holo.Button.Small"
            tools:text="New" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            android:onClick="onClickSwitchtProfileActivity"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>
