<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaschmed.wice.appProfile"
    tools:layout_editor_absoluteY="81dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/button22"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="260dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="#630808"
        android:onClick="onClickClose"
        android:text="Logout"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="112dp"
        android:layout_height="101dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="12dp">

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f44336"
            android:elevation="18dp"
            android:onClick="onClickSwitchtoIntoleranceActivity"
            android:text="@string/intoleranzen"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41"
            tools:layout_editor_absoluteX="23dp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="#e53935"
            android:elevation="18dp"
            android:text="@string/scanner"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:layout_editor_absoluteX="24dp" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="#d32f2f"
            android:elevation="18dp"
            android:onClick="onClickSwitchtoRezepteActivity"
            android:text="@string/rezepte"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:layout_editor_absoluteX="22dp" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="#c62828"
            android:elevation="18dp"
            android:onClick="onClickSwitchtoFavoritenActivity"
            android:text="@string/favoriten"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            tools:layout_editor_absoluteX="21dp" />

        <Button
            android:id="@+id/button21"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="#B71C1C"
            android:elevation="18dp"
            android:onClick="onClickSwitchtoSearchLocationActivity"
            android:text="@string/search_location"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>


</LinearLayout>
