<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.kaschmed.wice.Forum"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="top"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/recipetitle"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/myrecipe"
            app:layout_constraintEnd_toStartOf="@+id/checkBox3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_star_big_on"
            app:layout_constraintBottom_toTopOf="@+id/editText12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText7"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText12"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/recipedetails"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="178dp"
        android:isIndicator="false"
        android:numStars="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/comments"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        app:layout_constraintVertical_bias="1.0"
        tools:textAlignment="center" />

    <ListView
        android:id="@+id/myrecipe"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#f7eeee"
        android:columnWidth="100dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="278dp"></ListView>

    <EditText
        android:id="@+id/editText15"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/comment_this_recipe"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/button16"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="184dp"
            android:layout_height="58dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            android:text="@string/post_it"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="455dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="184dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/fourth"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            android:text="@string/button"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="455dp" />
    </LinearLayout>

</LinearLayout>
